# sigint-map

./: .gitignore  .gitmodules  ANALYSIS_SUMMARY.txt  AUDIT_COMPLETION_REPORT.md  AUDIT_COMPLETION_SUMMARY.txt  AUDIT_DELIVERABLES_INDEX.md  CLAUDE.md  CSS_AUDIT_INDEX.md  CSS_MODERNIZATION_SUMMARY.md  DMB_ALMANAC_COMPLETE_IMPLEMENTATION_REPORT.md  FIXES.md  GEN-PHYSICS-31-60.sh  GENERATE-4K-concepts-61-80.sh  GENERATE-ULTRA-REAL-31-60.sh  HANDOFF.md  MCP-SERVERS-README.md  MODERNIZATION_SUMMARY.txt  PHASE_4_COMPLETE.md  README.md  README_AUDIT_COMPLETE.md  SCRAPER_TESTING_CHECKLIST.md  SELECTOR_REMEDIATION_GUIDE.md  ULTRA-REAL-4K-concepts-31-60.sh  ULTRA-REAL-concepts-31-60.md  ULTRA-REAL-concepts-61-80.md  ULTRA-REAL-concepts-81-90.md  WORKSPACE_OPTIMIZATION_SUMMARY.md  app.js  base.css  claude-code-audit-report.md  dive-bar-concepts-61-80.md  dive-bar-concepts-81-90.md  edit-predictable-image.js  generate_icons.py  index.html  package-lock.json  package.json  style.css  update-prompts-ultra-real.sh
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/: Cargo.toml  build-all.sh
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/dmb-core/: Cargo.toml
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/dmb-date-utils/: Cargo.toml
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/dmb-force-simulation/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUADTREE_IMPLEMENTATION.md  README.md
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/dmb-segue-analysis/: Cargo.toml
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/dmb-string-utils/: Cargo.toml
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/dmb-transform/: Cargo.toml  README.md  build.sh
DMBAlmanacProjectFolder/dmb-almanac-svelte/wasm/dmb-visualize/: Cargo.toml
projects/blaires-kind-heart/: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF_SUMMARY_2026-02-15.md  README.md  Trunk.toml  index.html  lighthouserc.json  manifest.webmanifest  package-lock.json  package.json  playwright.config.ts  wasm-init.js
projects/blaires-kind-heart/.cargo/: config.toml
projects/blaires-kind-heart/.claude/: launch.json  settings.local.json
projects/blaires-kind-heart/.github/workflows/: pwa-health.yml  release-readiness.yml
projects/blaires-kind-heart/assets/: Makefile  generate-icons.sh  generate_icons.py
projects/blaires-kind-heart/assets/icons/: README.md
projects/blaires-kind-heart/config/: animation-timings.json  apple-silicon-trace-budget.json  db-contract.json  domain-modules.json  e2e-skip-waivers.json  index-shell.json  ipad-performance-budget.json  panels.json  phase5-kpi-baseline.json  reflection-prompts.json  skill-taxonomy.json
projects/blaires-kind-heart/deploy/: README.md
projects/blaires-kind-heart/deploy/docker/: Dockerfile  README.md  nginx.conf
projects/blaires-kind-heart/deploy/gitops/: README.md  application.yaml
projects/blaires-kind-heart/docs/: APP_STATUS.md  DEVELOPMENT_PHASES.md  FUTURE.md  HANDOFF.md  ICONS.md  INDEX.md  IPAD_REGRESSION_RUN_2026-02-13.md  IPAD_REGRESSION_TEMPLATE.md  MEMORY_REFERENCE.md  PERSISTENCE_CONTRACT.md  PROJECT_STANDING.md  PWA_STATUS.md  REPO_OPTIMIZATION_PLAN.md  STATUS_LEDGER.md  TESTING.md  TOKEN_ECONOMY_REPORT.md  TOKEN_OPTIMIZATION.md  TROUBLESHOOTING.md  WORKSPACE_DOCS_MAP.md
projects/blaires-kind-heart/e2e/: _probe-tracker-dom.spec.ts  a11y.spec.ts  coverage-gaps.spec.ts  critical-flows.spec.ts  db-contract.spec.ts  debug-smoke.spec.ts  feature-completeness.spec.ts  heart-economy.spec.ts  helpers.ts  index-shell-contract.spec.ts  ipad-performance-budget.spec.ts  mom-restore-file-input.spec.ts  panel-registry.spec.ts  runtime-diagnostics.spec.ts  smoke.spec.ts  visual.spec.ts  webkit.smoke.spec.ts
projects/blaires-kind-heart/public/: asset-manifest.js  asset-manifest.json  db-contract.js  db-worker.js  log-context.js  offline.html  offline.js  panel-registry.js  reflection-prompts.generated.js  runtime-diagnostics.js  skill-mastery-badges.js  skill-taxonomy.js  sw-assets.js  sw.js
projects/blaires-kind-heart/rust/: adaptive_quests.rs  animation_timings_generated.rs  animations.rs  assets.rs  audio.rs  badges.rs  badges_store.rs  bindings.rs  browser_apis.rs  celebration.rs  companion.rs  companion_care.rs  companion_care_store.rs  companion_skins.rs  companion_skins_store.rs  companion_speech.rs  confetti.rs  constants.rs  db_client.rs  db_contract_generated.rs  db_messages.rs  db_rows.rs  db_worker.rs  dom.rs  domain_services.rs  emotion_vocabulary.rs  family_board.rs  feature_flags.rs  game_catcher.rs  game_hug.rs  game_memory.rs  game_paint.rs  game_unicorn.rs  game_unicorn_audio.rs  game_unicorn_friends.rs  game_unicorn_sparkles.rs  game_unicorn_unicorn.rs  games.rs  garden_timeline.rs  gardens.rs  (+54 more)
projects/blaires-kind-heart/scripts/: apple-silicon-profile-flow.sh  apple-silicon-profile-iterate.sh  apple-silicon-profile.sh  asset-manifest.sh  build-verify-release.sh  check-active-doc-links.mjs  check-animation-timing-sync.mjs  check-critical-token-sync.mjs  check-db-contract.mjs  check-doc-token-budget.mjs  check-duplication-budget.mjs  check-e2e-skip-waivers.mjs  check-generated-sync.sh  check-index-shell-config.mjs  check-index-shell-contract-negative.mjs  check-index-shell-contract.mjs  check-panel-registry-shape.mjs  check-release-evidence.mjs  check-runtime-diagnostics-contract.mjs  check-rust-warning-budget.sh  check-rust-warning-drift.sh  check-taxonomy-contract.mjs  clean-workspace.sh  compress_gardens.py  convert-to-webp.sh  generate-acts-games-buttons.js  generate-animation-timings.mjs  generate-button-assets.js  generate-critical-inline-css.mjs  generate-db-contract.mjs  generate-images-slow.mjs  generate-images.mjs  generate-index-shell.mjs  generate-panel-registry.mjs  generate-reflection-prompts.mjs  generate-remaining-buttons.js  generate-skill-mastery-badges.mjs  generate-skill-taxonomy.mjs  generate-sticker-illustrations.js  generate-story-illustrations.js  (+10 more)
projects/blaires-kind-heart/shaders/: particles_compute.wgsl  particles_render.wgsl
projects/dmb-almanac/rust/: Cargo.toml  Leptos.toml  README.md  optimization-budgets.json
(+13684 files in other folders)
