[package]
name = "blaires-kind-heart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
js-sys = "0.3.85"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
web-sys = { version = "0.3.85", features = [
  "console",
  "AddEventListenerOptions",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlCanvasElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "Node",
  "NodeList",
  "DomTokenList",
  "CssStyleDeclaration",
  "DomRect",
  "DomStringMap",
  "DocumentFragment",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "PointerEvent",
  "MouseEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "Navigator",
  "Location",
  "StorageManager",
  "StorageEstimate",
  "Crypto",
  "CustomEvent",
  "CustomEventInit",
  "VisibilityState",
  "Performance",
  "PerformanceObserver",
  "PerformanceObserverInit",
  "PerformanceObserverEntryList",
  "PerformanceEntry",
  "IntersectionObserver",
  "IntersectionObserverInit",
  "IntersectionObserverEntry",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "ServiceWorkerContainer",
  "ServiceWorkerRegistration",
  "ServiceWorker",
  "AbortController",
  "AbortSignal",
  "SpeechSynthesis",
  "SpeechSynthesisUtterance",
  "SpeechSynthesisEvent",
  "SpeechSynthesisVoice",
  # Audio — Web Audio API for sound effects
  "AudioContext",
  "AudioContextState",
  "BaseAudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "AudioBuffer",
  "OscillatorNode",
  "OscillatorType",
  "GainNode",
  "ConvolverNode",
  "Animation",
  "ImageData",
  "MediaQueryList",
  "Screen",
  "ShareData",
] }

[features]
default = []

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
