[workspace]
resolver = "2"
members = [
    "dmb-core",
    "dmb-transform",
    "dmb-date-utils",
    "dmb-string-utils",
    "dmb-segue-analysis",
    "dmb-force-simulation",
    "dmb-visualize",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DMB Almanac Team"]
license = "MIT"

[workspace.dependencies]
# WASM bindings
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
web-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
console_error_panic_hook = "0.1.7"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Performance hashing
rustc-hash = "2"
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }

# Optional dependencies
rayon = "1.10"

# Dev dependencies
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
# Optimize for size - critical for WASM
opt-level = "z"
# Enable link-time optimization
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Remove panic infrastructure
panic = "abort"
# Strip all symbols
strip = "symbols"

[profile.release.package."*"]
opt-level = "z"

[profile.dev]
# Some optimization for dev builds
opt-level = 1
