[package]
name = "dmb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance data processing for DMB Almanac"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["console"] }
rustc-hash.workspace = true
console_error_panic_hook.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt with -Oz for maximum size reduction (~20%)
# Note: bulk-memory required by Rust stdlib
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
