[package]
name = "dmb-transform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance data transformation for DMB Almanac"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
# Enable parallel processing with rayon (optional, adds ~100KB)
parallel = ["rayon"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true

# Optional: parallel iterators for large datasets
rayon = { workspace = true, optional = true }

# Better panic messages in development
console_error_panic_hook = { workspace = true, optional = true }

# Date/time handling for liberation list computation
chrono.workspace = true

# HashSet/HashMap with better performance
ahash.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
criterion.workspace = true

[package.metadata.wasm-pack.profile.release]
# WASM-specific size optimization
# Enable wasm-opt with -Oz for maximum size reduction (~20%)
# Note: bulk-memory required by Rust stdlib, nontrapping-float-to-int for chrono
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
