[package]
name = "dmb-wasm-aggregations"
version = "0.1.0"
edition = "2021"
authors = ["DMB Almanac Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# NOTE: [profile.release] configuration is ignored at the package level in workspace mode.
# All optimization settings are configured in the workspace root: /rust/Cargo.toml
# See workspace Cargo.toml for detailed size optimization configuration.

# wasm-pack optimization profile
# Uses wasm-opt for post-processing WASM binary
# -Oz: Aggressive size optimization (more aggressive than -O3)
# --enable-bulk-memory: Modern WASM feature for efficient memory operations
# --enable-nontrapping-float-to-int: Modern WASM feature for float conversions
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
