[package]
name = "dmb-wasm-core"
version = "0.1.0"
edition = "2021"
authors = ["DMB Almanac Team"]

[lib]
crate-type = ["cdylib"]

[features]
aggregations = []
transforms = []
graphs = []
rag = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
