[package]
name = "dmb_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
leptos = "0.8.5"
leptos_router = "0.8.5"
leptos_config = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"
once_cell = "1.19"
futures = "0.3"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard", "Response", "StorageManager", "Storage", "Performance", "Cache", "CacheStorage", "console", "ServiceWorker", "ServiceWorkerContainer", "ServiceWorkerRegistration", "MessageEvent", "Blob", "Url", "UrlSearchParams", "HtmlAnchorElement", "HtmlInputElement", "FileList", "File", "Document", "Element"] }
dmb_idb = { path = "../dmb_idb" }
dmb_core = { path = "../dmb_core" }
dmb_wasm = { path = "../dmb_wasm", optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"], optional = true }

[dev-dependencies]
any_spawner = "0.3"
leptos_meta = "0.8.5"

[features]
ssr = [
  "leptos/ssr",
  "leptos_router/ssr",
  "sqlx"
]
hydrate = [
  "leptos/hydrate",
  "dmb_wasm"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
