[package]
name = "dmb_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = { version = "1.15", features = ["extern_crate_std"] }
blake3 = "1.5"
flate2 = "1.0"
rand = "0.8"
regex = "1.10"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate", "charset"] }
scraper = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

# Internal
dmb_core = { path = "../dmb_core" }

[dev-dependencies]
tempfile = "3.10"
